@@ -14,6 +14,9 @@ WebAuth 3.5.4 (unreleased)
     force the behavior we want.  (This is probably not necessary given the
     above change, but shouldn't hurt.)
 
+ *) Fix configure logic and Kerberos library analysis on systems with
+    multiple versions of Kerberos installed.
+
 WebAuth 3.5.3 (2006-09-12)
 
  *) Add the connection IP address and, for Weblogin logins, the client IP
